Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19025

RQG: CBQError: (forestdb crash) Intermittent Issue: host 172.23.106.43: ERROR:{u'status': u'errors', u'errors': [{u'msg': u'dial tcp 127.0.0.1:9101: connection refused from 127.0.0.1:9101

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Test Blocker
    • 4.5.0
    • 4.5.0
    • forestdb
    • 4.5.0-1994, forestdb indexer storage mode,primary indexes only
    • Untriaged
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      Error reported:

      CBQError: host 172.23.106.43: ERROR:{u'status': u'errors', u'errors': [

      {u'msg': u'dial tcp 127.0.0.1:9101: connection refused from 127.0.0.1:9101 - cause: dial tcp 127.0.0.1:9101: connection refused from 127.0.0.1:9101', u'code': 5000}

      ], u'results': [], u'metrics':

      {u'elapsedTime': u'207.601664ms', u'executionTime': u'207.494575ms', u'resultSize': 0, u'resultCount': 0, u'errorCount': 1}

      , u'requestID': u'84d49609-ef7d-4b75-ae4e-07013b48811d', u'signature': None}

      Query which fails:
      RUN QUERY MERGE INTO simple_table_4 USING copy_simple_table ON KEY copy_simple_table.primary_key_id WHEN MATCHED THEN DELETE WHERE ((simple_table_4.int_field1 = 4963 OR NOT (simple_table_4.varchar_field1 >= "ZbZqfWiNlA"))) AND ((simple_table_4.bool_field1 AND simple_table_4.varchar_field1 NOT BETWEEN "AAqTiLsBpo" and "zzPYicUkND")) OR (simple_table_4.char_field1 NOT LIKE '%N%') AND (simple_table_4.primary_key_id NOT BETWEEN "1" and "999")

      Test which fails:
      ./testrunner -i ${resource_tuq} -p gsi_type=forestdb -t rqg.test_rqg.RQGTests.test_rqg_crud_ops,test_file_path=b/resources/rqg/simple_table_db/query_tests_using_templates/crud_delete_ops_50000.txt.zip,database=crud_db,reset_database=True,concurreny_count=10,index_quota_percent=30,password=password,use_mysql=True,replicas=0,merge_operation=True,crud_type=merge_delete,total_queries=10000,record_failure=False,failure_record_path=/tmp/

      Job which fails:
      cen006-n1ql-vset08-01-rqg-crud-merge-delete-primary-secondary-tests

      What the test does?
      Creates 10 buckets,loads 1000 documents in each bucket.
      Creates primary index on each bucket.
      Issues queries like delete, merge into and then checks if there are correct entries in the bucket using select *.
      Queries to be run: 10,000
      Test starts failing after 1831 queries.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chiyoung Chiyoung Seo (Inactive)
            Prerna.Manaktala Prerna Manaktala (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty