MB-19025 Reset the header len to zero before fetching a header

As the caller checks the header len after fetching a header, the length
should be reset to zero before fetching the header.

Change-Id: Ic24b1eab07b41dfe36f3c66c2b8583a8880c6999
Reviewed-on: http://review.couchbase.org/62625
Reviewed-by: Sundararaman Sridharan <sundar@couchbase.com>
Tested-by: buildbot <build@couchbase.com>